kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-jooq-k8s-deployment
  labels:
    app: spring-jooq-k8s-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: spring-jooq-k8s-deployment
  template:
    metadata:
      labels:
        app: spring-jooq-k8s-deployment
    spec:
      containers:
        - name: spring-jooq-k8s-deployment
          imagePullPolicy: Always
          image: gerasimovv88/spring-jooq-k8s:1.0.0-SNAPSHOT
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
            periodSeconds: 7
